--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -6,7 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/salad.html">Salad</a>
+    <h1>Salad</h1>
   </body>
 </html>
