--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -7,5 +7,36 @@
   </head>
   <body>
     <h1>Salad</h1>
+    <img
+      src="https://www.allrecipes.com/thmb/JinyDdyciYyLFjlLvXNqrnJ9jsM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8499-basic-chicken-salad-DDMFS-4x3-1edf4d259ac9437da114bdcee84337ee.jpg"
+      alt="chicken salad"
+    />
+    <h2>Description</h2>
+    <p>
+      This basic chicken salad is the perfect blank canvas for any of your
+      favorite salad ingredients.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>½ cup blanched slivered almonds</li>
+      <li>½ cup mayonnaise</li>
+      <li>1 tablespoon lemon juice</li>
+      <li>¼ teaspoon ground black pepper</li>
+      <li>2 cups chopped, cooked chicken breast meat</li>
+      <li>1 stalk celery, diced</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Gather ingredients.</li>
+      <li>
+        Place almonds in a frying pan. Toast over medium-high heat, shaking pan
+        constantly. Watch carefully, as almonds burn easily.
+      </li>
+      <li>
+        Mix together mayonnaise, lemon juice and pepper in a medium bowl. Toss
+        with chicken, almonds and celery.
+      </li>
+      <li>Serve on a bed of lettuce. Refrigerate until ready to serve.</li>
+    </ol>
   </body>
 </html>
