--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Salad</h1>
+    <h1 id="salad">Salad</h1>
     <img
       src="https://www.allrecipes.com/thmb/JinyDdyciYyLFjlLvXNqrnJ9jsM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8499-basic-chicken-salad-DDMFS-4x3-1edf4d259ac9437da114bdcee84337ee.jpg"
       alt="chicken salad"
